src/objects/c2g__codaCheckRange__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpcheckrange</customHelpPage>
    <description>Defines a range of valid check numbers for the associated bank account..</description>
    <fields>
        <fullName>c2g__Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Check Ranges</relationshipLabel>
        <relationshipName>CheckRanges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__CheckRangeName__c</fullName>
        <label>Check Range Name</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__LastCheckNumber__c</fullName>
        <label>Last Check Number</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__NextCheckNumber__c</fullName>
        <label>Next Check Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Check Ranges</relationshipLabel>
        <relationshipName>CheckRanges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__StartCheckNumber__c</fullName>
        <label>Start Check Number</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__UnitofWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Check Range</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CHR{00000}</displayFormat>
        <label>Check Range ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check Ranges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>